<resources>
    <string name="app_name">crash app</string>
    <string name="hint_mail">Mail</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="button_ingresar">Ingresar</string>
    <string name="boton_siniestros">Denunciar Siniestro</string>
    <string name="text_ubicacion">¿Te encontras en el lugar del accidente?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="text_cant_vehiculo">¿Tuviste un accidente con otro vehiculo?</string>
    <string name="omitir">Omitir</string>
    <string name="abrir_camara">Abrir cámara</string>
    <string name="text_licencia">Registro del otro conductor</string>
    <string name="text_choque">Imágenes del siniestro</string>
    <string name="text_danos">¿Contás con fotografías de los daños?</string>
    <string name="text_cedula">Cedula del otro conductor</string>
    <string name="text_poliza">Póliza del otro conductor</string>
    <string name="seleccion_consulta">Selccioná tu consulta</string>
    <string name="boton_consulta">Consultá el estado de tu siniestro</string>
    <string name="boton_datos">Mis Datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="n_licencia">N° Licencia</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="pais">País</string>
    <string name="siguiente">Siguiente</string>
    <string name="text_datos_conductor">Los datos del conductor se agregaron correctamente.</string>
    <string name="text_datos_choque">La foto del choque se agregó correctamente.</string>
    <string name="text_datos_cedula">La foto de la cedula se agregó correctamente.</string>
    <string name="label_datos">Verificá tus datos</string>
    <string name="tus_datos">Tus datos</string>
    <string name="dni">DNI</string>
    <string name="domicilio">Domicilio</string>
    <string name="datos_del_tercero">Datos del tercero</string>
    <string name="licencia">Licencia</string>
    <string name="choque">Choque</string>
    <string name="cedula">Cedula</string>
    <string name="poliza">Poliza</string>
    <string name="text_accidente">Detalles del accidente</string>
    <string name="editar">Editar</string>
    <string name="datos_correctos">Los datos se han enviado correctamente!</string>
    <string name="label_breve">En la brevedad nos comunicaremos con vos para seguir el proceso.</string>
    <string name="reintentar">Reintentar</string>
    <string name="detalle">Detalle</string>
    <string name="title_activity_maps">Map</string>
    <string name="datos">Datos</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="label_ubicación">Completá los siguientes datos del accidente</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="datos_tercero">¿Contás con los datos del otro conductor?</string>
    <string name="detallanos_tu_accidente">Detallanos tu accidente</string>
    <string name="altura">Altura</string>
    <string name="calle">Calle</string>
    <string name="label_doble_mano">¿La calle era doble mano?</string>
    <string name="fue_en_una_esquina">¿Fue en una esquina?</string>
    <string name="info">¿Contás con alguna infrmación?</string>
    <string name="completa_datos">Completá los siguientes datos</string>
    <string name="datos_a_completar">Para que podamos ayudarte necesitamos que nos facilites toda la información que puedas del otro conductor.\nTené en cuenta los siguientes datos:</string>
    <string name="tene_cuenta">•Tipo de vehículo\n•Marca y patente\n•Descripción del otro conductor</string>
    <string name="ingresa_datos">Ingresá los datos pero no describas el accidente.</string>
    <string name="finalizar">Finalizar</string>
    <string name="describa_el_accidente">Describa el accidente</string>
    <string name="agregar_fotos">Agregar más fotos</string>
    <string name="confirmar_ubicacion">Confirmar Ubicación</string>
    <string name="policia">EMERGENCIAS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">Cancelar</string>
    <string name="texto_dorso">*Si sacas el codigo de barras de la parte trasera se completa automatico.</string>
</resources>
