<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white">

    <ImageView
        android:id="@+id/licenciaIcono"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_registro"
        app:layout_constraintBottom_toTopOf="@+id/buttonCamara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCamara" />

    <TextView
        android:id="@+id/textDorso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_dorso"
        android:textColor="@color/primaryText"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/licenciaIcono"
        app:layout_constraintStart_toStartOf="@+id/licenciaIcono"
        app:layout_constraintTop_toBottomOf="@+id/licenciaIcono" />

    <TextView
        android:id="@+id/textViewCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_licencia"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonCamara"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_button"
        android:text="@string/abrir_camara"
        android:textAllCaps="false"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOmitir"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/buttonOmitir"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/omitir"
        android:textAllCaps="false"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
