<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ExitoResumenFragment">

    <TextView
        android:id="@+id/textViewDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_datos"
        android:textColor="@color/primaryText"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDatosCorrectos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos_correctos"
        android:layout_marginTop="55dp"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatos" />

    <TextView
        android:id="@+id/textViewBrevedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_breve"
        android:layout_marginTop="17dp"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatosCorrectos" />


    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:text="@string/siguiente"
        android:textColor="@color/primaryText"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/border_button"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrevedad"
        android:src="@drawable/ic_check" />

</android.support.constraint.ConstraintLayout>