<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DatosFragment">

    <TextView
        android:id="@+id/textViewDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/completa_datos"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDatosACompletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:text="@string/datos_a_completar"
        android:textAlignment="textStart"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatos" />


    <TextView
        android:id="@+id/textViewDatos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:text="@string/tene_cuenta"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatosACompletar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewDetalle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatos2">

        <EditText
            android:id="@+id/editTextDetalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@null"
            android:hint="@string/ingresa_datos"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewSiguiente"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/siguiente"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>