<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context=".view.UbicacionFragment">

    <ImageView
        android:id="@+id/autoIcono"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toTopOf="@+id/buttonSi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCamara" />

    <TextView
        android:id="@+id/textViewCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSi"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:text="@string/si"
        android:textColor="@color/primaryText"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/border_button"/>

    <Button
        android:id="@+id/buttonNo"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:text="@string/no"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@color/primaryText"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

</android.support.constraint.ConstraintLayout>