<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResumenFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_datos"
            android:layout_marginTop="45dp"
            android:textColor="@color/primaryText"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarUsuarios" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="65dp"
            android:text="@string/tus_datos"
            android:textColor="@color/primaryText"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spliter1" />

        <TextView
            android:id="@+id/textApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/apellido"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

        <TextView
            android:id="@+id/textHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/dni"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

        <TextView
            android:id="@+id/textFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="47dp"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

        <TextView
            android:id="@+id/textPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/pais"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDni" />

        <TextView
            android:id="@+id/textDomicilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/domicilio"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPais" />

        <TextView
            android:id="@+id/textMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/hint_mail"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDomicilio" />


        <View
            android:id="@+id/spliter1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="40dp"
            android:background="@color/primaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNombre" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textApellido" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHora" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="120dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:focusable="false"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="@+id/textFecha"
            app:layout_constraintTop_toBottomOf="@+id/textFecha" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPais" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDomicilio" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:backgroundTint="@color/primaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMail" />


        <Button
            android:id="@+id/buttonEditar"
            android:layout_height="wrap_content"
            android:layout_width="250dp"
            android:text="@string/guardar_datos"
            android:textColor="@color/primaryText"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMail"
            android:background="@drawable/border_button"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarUsuarios"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Usuario"
            app:titleTextColor="@color/white" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>