<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.MenuActivity">

    <TextView
        android:id="@+id/textViewBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSiniestros" />

    <TextView
        android:id="@+id/textViewSeleccionaConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/seleccion_consulta"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBienvenida" />

    <ImageView
        android:id="@+id/botonSiniestros"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_siniestros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSeleccionaConsulta" />

    <TextView
        android:id="@+id/textViewSiniestro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/boton_siniestros"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonSiniestros" />

    <ImageView
        android:id="@+id/botonConsulta"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSiniestro" />

    <ImageView
        android:id="@+id/botonPolicia"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_policia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConsulta" />

    <TextView
        android:id="@+id/textViewPolicia"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/policia"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonPolicia" />

    <TextView
        android:id="@+id/textViewConsulta"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/boton_consulta"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonConsulta" />







    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSiniestros"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Siniestros"
        app:titleTextColor="@color/white" />


</android.support.constraint.ConstraintLayout>